src/test/deca/context/valid/personalTests/testDeclarationClasses.deca
// Test de déclaration d'une classe en deca

class A{
    public void getA(){
        return 1;
    }
}

class B{
    public void getB(){
        return 2;
    }
}

{
    A a;
    B b;
    a = new A();
    b = new B();
    a.getA();
    b.getB();
}